Prevent internal map from getting too small, and add scrollbar if needed

--- a/css/insidemap.css
+++ b/css/insidemap.css
@@ -1,9 +1,15 @@
 
-
+#internal-map-scroller{
+	width:max(100%,var(--mcd-inner-width)); /* Expand to absolute edges if needed*/
+	overflow-x:scroll;
+}
 #internal-map-container{
-	align-self:stretch;
+	align-self:center;
+	width:max(100%,400px); /* Don't shrink to less than 400px. */
 	aspect-ratio:1.0;
 	position:relative;
+	
+	
 }
 #internal-map-image{
 	position:absolute;
